--- a/package.json
+++ b/package.json
@@ -10,26 +10,36 @@
     "monitor": "cross-env NODE_ENV=monitor webpack --config ./webpack/webpack.config.js",
     "dll": "cross-env NODE_ENV=dll webpack --config ./webpack/webpack.dll.js",
     "prod": "npm run dll && npm run build",
-    "dev-dll": "npm run dll && npm run dev"
+    "dev-dll": "npm run dll && npm run dev",
+    "build-dev": "babel server/index.mjs --out-file lib/index.mjs --watch",
+    "server": "nodemon lib/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "antd": "^5.13.1",
+    "express": "^4.19.2",
+    "hls.js": "^1.5.8",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-saga": "^0.3.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "socket.io-client": "^4.7.5",
+    "wavesurfer.js": "^7.8.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.7",
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-flow": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@types/node": "^20.14.8",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
@@ -42,6 +52,7 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
